# AutoTranslator

./: .gitignore  Makefile  Package.swift  README.md  macos_app.py  pyproject.toml  setup.py
Sources/AutoTranslator/: AppController.swift  Errors.swift  MouseMonitor.swift  TextSelector.swift  main.swift
Sources/AutoTranslator/Translators/: GoogleTranslator.swift  LLMTranslator.swift  TranslatorProtocol.swift
Sources/AutoTranslator/UI/: DesignSystem.swift  FloatingWindow.swift
backend/LLM_set/: __init__.py  main.py
backend/app/: main.py  main_00.py  mouse_monitor.py  runtime_config.py  text_selector.py  translator_protocol.py
frontend/: window.py
tests/: test_llm_translator.py  test_runtime_config.py  test_selection_monitor.py
